# tubarr

./: .gitignore  Cargo.toml  LICENSE  dev.sh  readme.md
src/: common.rs  folders.rs  main.rs
src/database/: mod.rs  scripts.rs
src/taskrunner/: bgtask_channel_fetch.rs  bgtask_db_clean.rs  mod.rs  task_channel.rs  task_download.rs
src/webui/: mod.rs
src/webui/api/: channel.rs  conf.rs  mod.rs  task.rs  video.rs
src/webui/pages/: channels.rs  conf.rs  home.rs  mod.rs
src/webui/statics/: style.rs
static/: index.html
