[package]
name = "tubarr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
chrono = "0.4.38"
ctrlc = "3.4.5"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
