[package]
name = "tubarr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
chrono = "0.4.38"
ctrlc = "3.4.5"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rand = "0.8.5"
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"
tldextract = "0.6.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
